--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "dir" : "ltr",
     "lang" : "en",
-    "name" : "COVID19 PWA",
-    "scope" : "https://mustjab.github.io/",
+    "name" : "Basic PWA",
+    "scope" : ".",
     "display" : "minimal-ui",
     "start_url" : ".",
-    "short_name" : "COVID19 PWA",
+    "short_name" : "Basic PWA",
     "theme_color" : "silver",
     "description" : "PWA testing site",
     "orientation" : "any",
