--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "start_url" : ".",
     "short_name" : "Basic PWA",
     "theme_color" : "black",
-    "description" : "PWA testing site",
+    "description" : "PWA testing site ™",
     "orientation" : "any",
     "background_color" : "silver",
     "additional_search_terms" : [ "mustjab", "matrix" ],
