--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "dir" : "ltr",
     "lang" : "en",
-    "name" : "Basic PWA  &#8482;",
+    "name" : "Basic PWA \u2122\uFE0F",
     "scope" : ".",
     "display" : "minimal-ui",
     "start_url" : ".",
-    "short_name" : "Basic PWA  &#8482;",
+    "short_name" : "Basic PWA \u2122\uFE0F",
     "theme_color" : "black",
-    "description" : "PWA testing site &#8482;",
+    "description" : "PWA testing site \u2122\uFE0F",
     "orientation" : "any",
     "background_color" : "silver",
     "additional_search_terms" : [ "mustjab", "matrix" ],
