--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "dir" : "ltr",
     "lang" : "en",
-    "name" : "Basic PWA &#xE153;",
+    "name" : "Basic PWA \ue8482",
     "scope" : ".",
     "display" : "minimal-ui",
     "start_url" : ".",
-    "short_name" : "Basic PWA \ue349",
+    "short_name" : "Basic PWA \ue2122",
     "theme_color" : "black",
-    "description" : "PWA testing site \ue153 &#xE153;",
+    "description" : "PWA testing site \ue2122 &#xE2122;",
     "orientation" : "any",
     "background_color" : "silver",
     "additional_search_terms" : [ "mustjab", "matrix" ],
