--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "name" : "Basic PWA",
     "scope" : ".",
     "display" : "minimal-ui",
-    "id" : "start_page.html",
+    "id" : "index.html",
     "start_url" : ".",
     "short_name" : "Basic PWA",
     "theme_color" : "black",
