--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "dir" : "ltr",
     "lang" : "en",
-    "name" : "Basic PWA",
+    "name" : "Matrix PWA",
     "scope" : ".",
-    "display" : "minimal-ui",
+    "display" : "standalone",
     "id" : "index.html",
     "start_url" : ".",
-    "short_name" : "Basic PWA",
-    "theme_color" : "yellow",
+    "short_name" : "Matrix PWA",
+    "theme_color" : "blue",
     "description" : "PWA testing site",
     "orientation" : "any",
     "background_color" : "silver",
