--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "dir" : "ltr",
     "lang" : "en",
-    "name" : "Matrix PWA",
+    "name" : "Matrix WebApp",
     "scope" : ".",
     "display" : "minimal-ui",
     "id" : "index.html",
     "start_url" : ".",
     "short_name" : "PWA Matrix",
-    "theme_color" : "#00A862",
+    "theme_color" : "green",
     "description" : "PWA testing site",
     "orientation" : "any",
     "background_color" : "#FFFFFF",
